Fix light mode contrast too low

--- a/web/src/src.css
+++ b/web/src/src.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+        @apply bg-base-100;
+    }
+}
+
 @layer utilities {
   .out {
     &:after {
